# grid_binance

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Makefile  fix_layouts.py  package.json  pnpm-lock.yaml  turbo.json
apps/api-server/: Cargo.toml
apps/api-server/src/: lib.rs  main.rs
apps/api-server/src/routes/: admin_address_pools.rs  admin_audit.rs  admin_backtest.rs  admin_deposits.rs  admin_memberships.rs  admin_strategies.rs  admin_sweeps.rs  admin_system.rs  admin_templates.rs  admin_users.rs  analytics.rs  auth.rs  auth_guard.rs  backtest.rs  backtest_route.rs  billing.rs  exchange.rs  exports.rs  live_statistics.rs  martingale_portfolios.rs  membership.rs  orders.rs  profile.rs  security.rs  strategies.rs  telegram.rs
apps/api-server/src/services/: analytics_service.rs  auth_service.rs  backtest_service.rs  exchange_service.rs  live_statistics_service.rs  martingale_exchange_preconfigure_service.rs  martingale_publish_service.rs  membership_service.rs  strategy_service.rs  telegram_service.rs
apps/api-server/tests/: admin_address_pools_flow.rs  admin_deposit_flow.rs  analytics_flow.rs  auth_flow.rs  backtest_flow.rs  exchange_flow.rs  martingale_backtest_flow.rs  membership_flow.rs  notification_flow.rs  profile_flow.rs  strategy_flow.rs
apps/api-server/tests/support/: mod.rs
apps/backtest-engine/: Cargo.toml
apps/backtest-engine/src/: artifacts.rs  engine.rs  indicators.rs  intelligent_search.rs  lib.rs  market_data.rs  model.rs  portfolio_search.rs  search.rs  sqlite_market_data.rs  time_splits.rs  walk_forward.rs
apps/backtest-engine/src/martingale/: allocation.rs  budget_replay.rs  capital.rs  exit_rules.rs  indicator_runtime.rs  kline_engine.rs  metrics.rs  mod.rs  portfolio_optimizer.rs  regime.rs  rules.rs  scoring.rs  state.rs  trade_engine.rs
apps/backtest-engine/tests/: search_scoring_time_splits.rs
apps/backtest-worker/: Cargo.toml
apps/backtest-worker/src/: main.rs
apps/billing-chain-listener/: Cargo.toml
apps/billing-chain-listener/src/: address_pool.rs  lib.rs  main.rs  order_matcher.rs  processor.rs  rpc.rs
apps/billing-chain-listener/tests/: rpc_projection.rs
apps/market-data-gateway/: Cargo.toml
apps/market-data-gateway/src/: binance_ws.rs  lib.rs  main.rs  subscriptions.rs
apps/market-data-gateway/tests/: runtime_wiring.rs
apps/scheduler/: Cargo.toml
apps/scheduler/src/: lib.rs  main.rs
apps/scheduler/src/jobs/: membership_grace.rs  reminders.rs  symbol_sync.rs
apps/trading-engine/: Cargo.toml
apps/trading-engine/src/: execution_effects.rs  execution_sync.rs  grid_builder.rs  lib.rs  main.rs  martingale_budget.rs  martingale_candle.rs  martingale_exit.rs  martingale_recovery.rs  martingale_runtime.rs  order_sync.rs  runtime.rs  statistics.rs  stop_loss.rs  strategy_runtime.rs  take_profit.rs  telegram_notify.rs  trade_sync.rs
apps/trading-engine/tests/: candle_aggregation.rs  execution_effects.rs  execution_sync.rs  grid_runtime.rs  martingale_budget.rs  martingale_recovery.rs  martingale_runtime.rs  order_sync.rs  trade_sync.rs
apps/web/: i18n.ts  next.config.ts  package-lock.json  package.json  playwright.config.ts  proxy.ts  tailwind.config.ts  tsconfig.json
crates/shared-auth/: Cargo.toml
crates/shared-binance/: Cargo.toml
crates/shared-binance/src/: client.rs  lib.rs  metadata.rs
crates/shared-chain/: Cargo.toml
crates/shared-config/: Cargo.toml
crates/shared-db/: Cargo.toml
crates/shared-db/src/: backtest.rs  lib.rs
crates/shared-db/src/postgres/: admin.rs  billing.rs  config.rs  connection.rs  exchange.rs  identity.rs  migrations.rs  mod.rs  notification.rs  strategy.rs  transaction.rs
crates/shared-db/src/redis/: client.rs  config.rs  mod.rs
crates/shared-domain/: Cargo.toml
crates/shared-domain/src/: analytics.rs  lib.rs  martingale.rs  membership.rs  strategy.rs
crates/shared-events/: Cargo.toml
crates/shared-telemetry/: Cargo.toml
db/migrations/: 0001_initial_core.sql  0002_identity_security.sql  0003_membership_billing.sql  0004_trading.sql  0005_admin_and_notifications.sql  0006_membership_billing_runtime_hardening.sql  0007_strategy_runtime_hardening.sql  0008_strategy_engine_rewrite.sql  0008_strategy_runtime_mode_alignment.sql  0009_strategy_snapshot_funding.sql  0010_sweep_lifecycle_columns.sql  0011_strategy_template_futures_fields.sql  0012_strategy_engine_rewrite.sql  0013_strategy_type_and_reference_source_template_support.sql  0014_strategy_template_reference_price_support.sql  0015_strategy_tags_and_notes.sql  0016_notification_preferences.sql  0017_martingale_backtest_portfolios.sql  0018_martingale_batch_portfolio_publish.sql
deploy/docker/: api-server.Dockerfile  docker-compose.e2e.yml  docker-compose.yml  rust-service.Dockerfile  web.Dockerfile
deploy/monitoring/: alert-rules.yml  prometheus.yml
deploy/nginx/: default.conf
docs/admin-guide/: operations.md  (+5 more)
scripts/: create_smoke_50u_portfolio.py  cross_task_recombine.py  dgt_dynamic_grid_probe.py  download_funding.py  download_klines.py  dynamic_breakout_trend_probe.py  funding_sleeve_probe.py  glm_atr_adx_efficiency_search.py  glm_dd_stop_sweep.py  glm_fixed_stop_search.py  glm_highann_dd_optimize.py  glm_hightp_optimize.py  glm_portfolio_optimize.py  glm_portfolio_segment_search.py  glm_reentry_atr_search.py  glm_regime_gated_martingale_search.py  glm_segment_validator.py  glm_tight_sl_search.py  hybrid_frontier_wide_search.py  hybrid_martingale_frontier_probe.py  martingale_frontier_evidence_audit.py  martingale_goal_completion_audit.py  martingale_live_promotion_gate_audit.py  martingale_result_leak_audit.py  martingale_target_gap_audit.py  monitor_martingale_backtests.sh  native_small_portfolio_search.py  optimize_margin_v2_lp_portfolios.py  optimize_martingale_lp_portfolios.py  original_margin_pack_v7.py  p4_row_combo_search.py  pair_neutral_grid_probe.py  pair_neutral_portfolio_probe.py  pair_neutral_risk_control_probe.py  probe_p4_combo_l5_only.py  probe_p4_combo_mix.py  probe_p4_combo_targeted.py  replay_curve_frontier_real.py  reset_runtime_identity.sh  run-playwright-e2e.mjs  (+12 more)
(+597 files in other folders)
