[workspace]
members = [
    "apps/api-server",
    "apps/trading-engine",
    "apps/market-data-gateway",
    "apps/billing-chain-listener",
    "apps/scheduler",
    "crates/shared-config",
    "crates/shared-db",
    "crates/shared-auth",
    "crates/shared-domain",
    "crates/shared-binance",
    "crates/shared-chain",
    "crates/shared-events",
    "crates/shared-telemetry",
]
resolver = "2"

[workspace.package]
edition = "2021"

[workspace.dependencies]
chrono = { version = "0.4", features = ["serde"] }
redis = { version = "0.27", features = ["tokio-comp"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "postgres", "chrono", "json", "migrate", "macros"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync", "time"] }
