[workspace]
members = [
    "apps/api-server",
    "apps/trading-engine",
    "apps/market-data-gateway",
    "apps/billing-chain-listener",
    "apps/scheduler",
    "crates/shared-config",
    "crates/shared-db",
    "crates/shared-auth",
    "crates/shared-domain",
    "crates/shared-binance",
    "crates/shared-chain",
    "crates/shared-events",
    "crates/shared-telemetry",
]
resolver = "2"

[workspace.package]
edition = "2021"

[workspace.dependencies]
aes-gcm = "0.10"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
getrandom = "0.2"
redis = { version = "0.27", features = ["tokio-comp"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "postgres", "chrono", "json", "migrate", "macros"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync", "time"] }
