[package]
name = "api-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
billing-chain-listener = { path = "../billing-chain-listener" }
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shared-binance = { path = "../../crates/shared-binance" }
shared-chain = { path = "../../crates/shared-chain" }
shared-auth = { path = "../../crates/shared-auth" }
shared-domain = { path = "../../crates/shared-domain" }
shared-events = { path = "../../crates/shared-events" }
trading-engine = { path = "../trading-engine" }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tower = { version = "0.5", features = ["util"] }
