[package]
name = "backtest-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.32", features = ["bundled"] }
rust_decimal = { version = "1", features = ["serde-with-str"] }
sha2 = { workspace = true }
shared-domain = { path = "../../crates/shared-domain" }
rand = "0.8"

[dev-dependencies]
tempfile = "3"
