[package]
name = "billing-chain-listener"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shared-db = { path = "../../crates/shared-db" }
shared-chain = { path = "../../crates/shared-chain" }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net"] }
