[package]
name = "billing-chain-listener"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
chrono = "0.4"
num-bigint = "0.4"
num-traits = "0.2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shared-db = { path = "../../crates/shared-db" }
shared-events = { path = "../../crates/shared-events" }
shared-chain = { path = "../../crates/shared-chain" }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "time", "sync"] }
ureq = { version = "2", features = ["json"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
