[package]
name = "shared-binance"
version = "0.1.0"
edition = "2021"

[dependencies]
aes-gcm = { workspace = true }
base64 = { workspace = true }
getrandom = { workspace = true }
serde = { workspace = true }
sha2 = { workspace = true }
hex = "0.4"
hmac = "0.12"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rust_decimal = "1"
serde_json = { workspace = true }
