[package]
name = "shared-db"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { workspace = true }
redis = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
shared-chain = { path = "../shared-chain" }
shared-domain = { path = "../shared-domain" }
shared-events = { path = "../shared-events" }
